2004-10-05  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to gl_EXITFAIL.
	* gnulib-update (MODULES): Add exitfail.
	* srclist.txt (exitfail): Remove list now generated by gnulib-update.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* gnulib-update (MODULES): Add exit.
	* srclist.txt (exit): Remove list now generated by gnulib-update.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* srclist.txt (xalloc): Remove list since it is now generated by
	gnulib-update.

2004-10-05  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dsp: Add "lib/save-cwd.h" and "lib/xgetcwd.h" to project.
	* cvsnt.dep: Regenerated for "cvsnt.dsp" change.
	* cvsnt.mak: Regenerated for "cvsnt.dsp" change.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to gl_DIRNAME.
	* gnulib-update (MODULES): Add dirname.
	* srclist.txt: Remove auto-updated GNULIB modules.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* gnulib.txt: New file.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* gnulib-update: Keep track of file changes.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* configure.in: Consolidate some GNULIB macro calls into a call to the
	autogenerated gl_INIT.
	* gnulib-update: New script.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* configure.in: Rename some GNULIB macro calls.
	* srclist.txt (gettext, vasnprintf, shared): Add new files.
	* config.rpath: Import new version from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* configure.in: Call gl_SAVE_CWD.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* configure.in: Call gl_XGETCWD.
	* srclist.txt (xgetcwd): New module.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* srclist.txt (pathmax): Remove dependency on onceonly_2_57.m4.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* srclist.txt (unlocked-io): Remove dependency on onceonly_2_57.m4.

2004-10-05  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dsp: Add "lib/dirname.h" and "src/parseinfo.h" to project.